# ict_2025

./: .bkit-memory.json  .flake8  .gitignore  .llmignore  .mcp.json  .pdca-status.json  CLAUDE.md  README.md  TODO.md  opencode.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_backfill.py  test_fixes.py
.agent/: rules.md
.bkit/: agent-state.json
.claude/: settings.local.json
.github/: ISSUE_TEMPLATE.md
.omc/: continuation-count.json  project-memory.json  ralplan-state.json
.opencode/: oh-my-opencode.json  oh-my-opencode.json.bak.2026-01-31T06-04-29-055Z
.serena/: project.yml
.taskmaster/: config.json  state.json
analysis/: 전략_유효성_평가_20260119.md
antigravitydocs/: walkthrough.md.resolved
claudedocs/: README.md  REFACTORING_audit_logger_dependency_injection.md  audit_logger_integration.md  backfill_implementation.md  buffer_removal_architecture_analysis.md  emergency_shutdown_requirements.md  ict_strategy_proposal.md  ict_strategy_tuning_design.md  ict_tier2_implementation_summary.md  liquidation_testnet_verification_report.md  mtf_design_compliance_report.md  multi_timeframe_strategy_design.md  phase2_architecture_design.md  phase3_initialization_order_refactoring_summary.md  pipeline_validation_results.md  refactor_trading_engine_dependency_v2.md  status_buffer_architecture.md
conductor/: product-guidelines.md  product.md  tech-stack.md
configs/: api_keys.ini.example  base.yaml  trading_config.ini  trading_config.ini.example  trading_config.yaml.example
docs/: .bkit-memory.json  .pdca-status.json  PDCA-Strategy-Abstraction-Redesign.report.md
opencodedocs/: design-analysis-2026-01-23-opencode.md
scripts/: debug_aggregator.py  example_metrics_usage.py  simple_btc_stream.py  test_binance_integration.py  test_binance_mainnet.py  test_config_refactoring.py  test_rest_api.py  validate_liquidation_config.py  verify_tpsl.py
src/: __init__.py  main.py
temp/: 20260304_1530_Composable_Strategy_Architecture_Refactoring.md  (+2 more)
(+761 files in other folders)
